--- a/CSManagement/CSManagement/Views/Disposes/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Disposes/Index.cshtml
@@ -9,6 +9,9 @@
     <div class="box box-default">
         <div class="box-header with-border">
             <h1 class="box-title">การจำหน่ายครุภัณฑ์</h1>
+            <div style="float: right">
+                <a class="btn btn-default" href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+            </div>
         </div>
 
         <div class="box-body">
