--- a/CSManagement/CSManagement/Views/Histories/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Index.cshtml
@@ -23,10 +23,10 @@
                 <thead>
                     <tr>
                         <th style="text-align:center">ที่</th>
-                        <th>@Html.DisplayNameFor(model => model.HIS_Jobname)</th>
                         <th style="text-align:center">ชื่อ-นามสกุล</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.HIS_Company)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Job.JOB_Name)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.HIS_Jobname)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.HIS_Company)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.HIS_Year)</th>
                         <th style="text-align:center">จัดการข้อมูล</th>
                     </tr>
@@ -36,14 +36,14 @@
                     {
                         <tr>
                             <td style="text-align:center">@(i++)</td>
-                            <td>@Html.DisplayFor(modelItem => item.HIS_Jobname)</td>
                             <td>@item.Student.Stu_Title@item.Student.Stu_Name @item.Student.Stu_Surname</td>
                             <td>@Html.DisplayFor(modelItem => item.Job.JOB_Name)</td>
+                            <td>@Html.DisplayFor(modelItem => item.HIS_Jobname)</td>
                             <td>@Html.DisplayFor(modelItem => item.HIS_Company)</td>
                             <td style="text-align:center">@Html.DisplayFor(modelItem => item.HIS_Year)</td>
                             <td style="text-align:center">
                                 <a class="btn btn-warning" href="@Url.Action("Edit", "Histories", new { id = item.HIS_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
-                                <a class="btn btn-info" href="@Url.Action("Details", "Histories", new { id = item.HIS_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                @*<a class="btn btn-info" href="@Url.Action("Details", "Histories", new { id = item.HIS_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>*@
                                 <a class="btn btn-danger" href="@Url.Action("Delete", "Histories", new { id = item.HIS_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
                             </td>
                         </tr>
