--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -10,82 +10,121 @@
     }
 </style>
 
-<section class="content">
-    <div class="box-default">
-        <div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
-            <ol class="carousel-indicators">
-                @for (int j = 0; j < ViewBag.Count; j++)
-                {
-                    <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
-                }
-            </ol>
-            <div class="carousel-inner">
-                @{int i = 0;}
-                @foreach (var item in Model)
-                {
-                    i++;
-                    var active = i == 1 ? "active" : "";
-                    <div class="item @active">
-                        <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%" />
+<section class="banner full">
+    <div class="row">
+        <div class="col-lg-8 col-md-12 col-sm-12 ">
+            <div class="panel panel-default outer" style="width:95%">
+                <div class="panel-body text-justify">
+                    <div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
+                        <ol class="carousel-indicators">
+                            @for (int j = 0; j < ViewBag.Count; j++)
+                            {
+                                <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
+                            }
+                        </ol>
+                        <div class="carousel-inner">
+                            @{int i = 0;}
+                            @foreach (var item in Model)
+                            {
+                                i++;
+                                var active = i == 1 ? "active" : "";
+                                <div class="item @active">
+                                    <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%;height:50%" />
+                                </div>
+                            }
+                        </div>
+                        <a class="left carousel-control" data-target="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" data-target="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                }
+                </div>
             </div>
-            <a class="left carousel-control" data-target="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" data-target="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
 
+        @*ประชาสัมพันธ์ข่าวสารของสาขา*@
+        <div class="col-lg-4 col-md-12 col-sm-12 ">
+            <div class="panel panel-default outer" style="width:95%">
+                <div class="panel-heading headerbar">
+                    ข่าวประชาสัมพันธ์
+                </div>
+                <div class="panel-body text-justify">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Menu 1</a></li>
+                        <li><a href="#">Menu 2</a></li>
+                        <li><a href="#">Menu 3</a></li>
+                    </ul>
+                    <br>
+                    <p><strong>Note:</strong> This example shows how to create a basic navigation tab. It is not toggleable/dynamic yet (you can't click on the links to display different content)- see the last example in the Bootstrap Tabs and Pills Tutorial to find out how this can be done.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="box-default">
+
+    <style>
+        .card-img-top {
+            box-shadow: 5px 5px 5px #d9d9d9;
+            max-width: 100%;
+            max-height: 100%;
+            margin-top: 10px;
+        }
+    </style>
+
+    <div class="container">
         <div class="card-body">
-            <div class="row" style="padding:15px">
-                <div class="card col-lg-3">
-                    <img src="~/img/logo1.png" alt="Avatar" style="width:100%" />
+            <div class="row">
+                <div class="col-12 col-lg-3 col-md-3 col-sm-6">
+                    <img src="~/img/logo1.png" class="card-img-top" />
                 </div>
 
-                <div class="card col-lg-3">
-                    <img src="~/img/logo2.png" alt="Avatar" style="width:100%">
+                <div class="col-12 col-lg-3 col-md-3 col-sm-6">
+                    <img src="~/img/logo2.png" class="card-img-top">
                 </div>
 
-                <div class="card col-lg-3">
-                    <img src="~/img/logo3.png" alt="Avatar" style="width:100%">
+                <div class="col-12 col-lg-3 col-md-3 col-sm-6">
+                    <img src="~/img/logo3.png" class="card-img-top">
                 </div>
 
-                <div class="card col-lg-3">
-                    <a href="" onclick="window.location.href = '@Url.Action("GoRegister", "Pictures" )'"><img src="~/img/logo4.png" alt="Avatar" style="width:100%" /></a>
+                <div class="col-12 col-lg-3 col-md-3 col-sm-6">
+                    <a href="http://register.kru.ac.th/reg/"><img src="~/img/logo4.png" class="card-img-top" /></a>
                 </div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-6">
-                <div class="box box-danger">
-                    <div class="box-header with-border set-text">
-                        <h3 class="box-title" style="letter-spacing:0px">สัดส่วนหมวดวิชาหลักสูตรสาขา</h3>
-                    </div>
-                    <div class="box-body chart-responsive">
-                        <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="panel panel-default outer" style="width:95%">
+                        <div class="panel-heading headerbar">
+                            สัดส่วนหมวดวิชาหลักสูตรสาขา
+                        </div>
+                        <div class="panel-body text-justify chart-responsive">
+                            <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="box box-danger">
-                    <div class="box-header with-border set-text">
-                        <h3 class="box-title" style="letter-spacing:0px">สัดส่วนการเข้าทำงานของศิษย์เก่า</h3>
-                    </div>
-                    <div class="box-body chart-responsive">
-                        <div class="chart" id="chartContainer2" style="height: 300px; position: relative;"></div>
+
+                <div class="col-md-6">
+                    <div class="panel panel-default outer" style="width:95%">
+                        <div class="panel-heading headerbar">
+                            สัดส่วนการเข้าทำงานของศิษย์เก่า
+                        </div>
+                        <div class="panel-body text-justify chart-responsive">
+                            <div class="chart" id="chartContainer2" style="height: 300px; position: relative;"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+
+        @*ผลงานนักศึกษา*@
         <p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>ผลงานนักศึกษา<i class="fa fa-star"></i></p>
         <div class="row">
             @{
@@ -109,7 +148,9 @@
                                             <span class="pull-right badge bg-aqua">เข้าชม</span>
                                         </a>
                                     </li>
-                                    <li><a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=@item.Pj_Video" data-target="#myModal">วิดีโอ
+                                    <li>
+                                        <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=@item.Pj_Video" data-target="#myModal">
+                                            วิดีโอ
                                             <span class="pull-right badge bg-aqua">เข้าชม</span>
                                         </a>
                                     </li>
@@ -120,6 +161,7 @@
                 }
             }
         </div>
+
 
         <!-- Modal Video -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -139,7 +181,49 @@
             </div>
         </div>
 
+        @*แนะนำว่าเรียนอะไรบ้าง*@
+    <div class="container">
+        @*<div class="panel panel-default outer" style="padding: 1em 5em;">*@
+        <p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>สาขาเราเรียนอะไรกัน<i class="fa fa-star"></i></p>
+        <div class="row">
+            <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="panel panel-default outer" style="width:90%">
+                    <div class="panel-heading headerbar">
+                        1.การเขียนแอพพลิเคชั่น
+                    </div>
+                    <div class="panel-body text-justify">
+                        <img src="~/img/images.jpg" style="width:80%;height:50%" />
+                        <p>พัฒนาแอพพลิชั่นด้วยCross platform เช่น Xamarin, Ionic, React</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="panel panel-default outer" style="width:90%">
+                    <div class="panel-heading headerbar">
+                        1.การเขียนแอพพลิเคชั่น
+                    </div>
+                    <div class="panel-body text-justify">
+                        <img src="~/img/images.jpg" style="width:80%;height:50%" />
+                        <p>พัฒนาแอพพลิชั่นด้วยCross platform เช่น Xamarin, Ionic, React</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="panel panel-default outer" style="width:90%">
+                    <div class="panel-heading headerbar">
+                        1.การเขียนแอพพลิเคชั่น
+                    </div>
+                    <div class="panel-body text-justify">
+                        <img src="~/img/images.jpg" style="width:80%;height:50%" />
+                        <p>พัฒนาแอพพลิชั่นด้วยCross platform เช่น Xamarin, Ionic, React</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+        </div>
 </section>
 
 
@@ -200,6 +284,7 @@
         opacity: 1;
     }
 </style>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
