--- a/CSManagement/CSManagement/Views/Pictures/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Index.cshtml
@@ -6,38 +6,45 @@
     }
 </style>
 
-<div style="float:right">
-    <a class="btn btn-success" href="@Url.Action("Create", "Pictures")"><i class="fa fa-plus"></i>เพิ่มรูปภาพ</a>
-</div>
-
-<div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
-    <ol class="carousel-indicators">
-        @for (int j = 0; j < ViewBag.Count; j++)
-        {
-            <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
-        }
-    </ol>
-    <div class="carousel-inner">
-        @{int i = 0;}
-        @foreach (var item in Model)
-        {
-            i++;
-            var active = i == 1 ? "active" : "";
-            <div class="item @active">
-                <img src="~/imgSlideShow/@item.Pic_Img" style="width: 900px; height: 600px;" />
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการรูปภาพประชาสัมพันธ์</h1>
+                    <div style="float:right">
+                        <input class="btn btn-default" type="button" value="สมัครเรียน" onclick="window.location.href = '@Url.Action("GoRegister", "Pictures" )'" />
+                        <a class="btn btn-success" href="@Url.Action("Create", "Pictures")"><i class="fa fa-plus"></i> เพิ่มรูปภาพ</a>
+                    </div>
+                </div>
             </div>
-        }
+        </div>
+        <div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
+            <ol class="carousel-indicators">
+                @for (int j = 0; j < ViewBag.Count; j++)
+                {
+                    <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
+                }
+            </ol>
+            <div class="carousel-inner">
+                @{int i = 0;}
+                @foreach (var item in Model)
+                {
+                    i++;
+                    var active = i == 1 ? "active" : "";
+                    <div class="item @active">
+                        <img src="~/imgSlideShow/@item.Pic_Img" style="width:800px; height:400px" />
+                    </div>
+                }
+            </div>
+            <a class="left carousel-control" data-target="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" data-target="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
-    <a class="left carousel-control" data-target="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" data-target="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div style="text-align: center">
-    <input type="button" value="สมัครเรียน" onclick="window.location.href = '@Url.Action("GoRegister", "Pictures" )'" />
-</div>
+</section>
