--- a/CSManagement/CSManagement/Views/Projects/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/IndexUser.cshtml
@@ -4,40 +4,121 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-
-<div class="grid-container">
-    <div class="container">
-        <div class="col-lg-8 col-md-12 col-sm-12 item1">
-            <div class="panel panel-default outer" style="width:95%;margin: 0px 100px 10px 0px">
-                <div class="panel-heading headerbar">
-                    ผลงานนักศึกษา
+<body>
+    @*<div class="grid-container">
+            <div class="container">
+                <div class="col-lg-8 col-md-12 col-sm-12 item1">
+                    <div class="panel panel-default outer" style="width:95%;margin: 0px 100px 10px 0px">
+                        <div class="panel-heading headerbar">
+                            ผลงานนักศึกษา
+                        </div>
+                        <div class="panel-body text-justify">
+                            <img class="d-block img-fluid" src="~/imgSlideShow/present1.png" width="600" height="400">
+                        </div>
+                    </div>
                 </div>
-                <div class="panel-body text-justify">
-                    <img class="d-block img-fluid" src="~/imgSlideShow/present1.png" width="600" height="400">
+            </div>
+        </div>*@
+
+    <p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>ผลงานนักศึกษา<i class="fa fa-star"></i></p>
+    <div class="row">
+        @{
+            foreach (var item in ViewBag.ProjectCount)
+            {
+                <div class="col-md-4">
+                    <div class="box box-widget widget-user-2">
+                        <div class="widget-user-header bg-yellow">
+                            <div class="widget-user-image">
+                                <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
+                            </div>
+                            <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h3>
+                            <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
+                        </div>
+                        <div class="box-footer no-padding">
+                            <ul class="nav nav-stacked">
+                                <li><a target="_blank" href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                                <li>
+                                    <a target="_blank" href="@Url.Action("ShowPdf", "Projects")?id=@item.Pj_ID">
+                                        รูปเล่ม
+                                        <span class="pull-right badge bg-aqua">เข้าชม</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=@item.Pj_Video" data-target="#myModal">
+                                        วิดีโอ
+                                        <span class="pull-right badge bg-aqua">เข้าชม</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+    <!-- Modal Video -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="modelClose">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <!-- 16:9 aspect ratio -->
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" id="videos" scrolling="no" src="" allowscriptaccess="always" allowFullScreen="true"></iframe>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
-</div>
+</body>
 
+<style>
 
-<p class="page-header text-center" style="font-size:40px"><i class="fa fa-star"></i>ผลงานนักศึกษา<i class="fa fa-star"></i></p>
-<div class="row">
-    <div class="col-md-4">
-        <div class="box box-widget widget-user-2">
-            <div class="widget-user-header bg-yellow">
-                <div class="widget-user-image">
-                    <img class="img-circle" img src="~/img/icons8-cat-profile-64.png" />
-                </div><h3 class="widget-user-username" style="letter-spacing:0px">นางสาวญาณี วงค์ตันฮวด</h3>
-                <h5 class="widget-user-desc">จัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</h5>
-            </div>
-            <div class="box-footer no-padding">
-                <ul class="nav nav-stacked">
-                    <li><a href="#">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
-                    <li><a href="#">รูปเล่ม<span class="pull-right badge bg-aqua">เข้าชม</span></a></li>
-                    <li><a href="#">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+    .modal-dialog {
+        max-width: 800px;
+        margin: 30px auto;
+    }
+
+    .close {
+        position: absolute;
+        right: 1%;
+        top: 0;
+        z-index: 999;
+        font-size: 4rem;
+        font-weight: normal;
+        color: black;
+        opacity: 1;
+    }
+</style>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        // Gets the video src from the data-src on each button
+
+        var $videoSrc;
+        $('.video-btn').click(function () {
+            $videoSrc = $(this).data("src");
+            $("#videos").attr('src', $videoSrc);
+        });
+        // when the modal is opened autoplay it
+        //$('#myModal').on('shown.bs.modal', function () {
+        //})
+
+        // stop playing the youtube video when I close the modal
+        $('#myModal').on('hide.bs.modal', function () {
+            // a poor man's stop video
+            $("#videos").attr('src', $videoSrc);
+        })
+
+        $('#modelClose').click(function () {
+            $("#videos").attr('src', $videoSrc);
+        });
+        // document ready
+    });
+
+</script>
