--- a/CSManagement/CSManagement/Views/Register_SC/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Register_SC/Index.cshtml
@@ -3,50 +3,83 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
+    }
+
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการข้อมูลการสมัครอบรม</h1>
+                    @*<div style="float:right">
+                        <a class="btn btn-success" href="@Url.Action("Create", "Register_SC")"><i class="fa fa-plus"></i> เพิ่มข้อมูลการสมัคร</a>
+                    </div>*@
+                </div>
+            </div>
+        </div>
+
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.REG_Name)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.REG_Address)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.REG_Tel)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.REG_Email)</th>
+                        @*<th style="text-align:center">จัดการข้อมูล</th>*@
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                    <tr>
+                        <td style="text-align:center">@(i++)</td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.REG_Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.REG_Address)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.REG_Tel)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.REG_Email)
+                        </td>
+                        @*<td style="text-align:center">
+                            <a class="btn btn-warning" href="@Url.Action("Edit", "Register_SC", new { id = item.REG_IDCard })"><i class="fa fa-edit"></i>แก้ไข</a>
+                            <a class="btn btn-info" href="@Url.Action("Details", "Register_SC", new { id = item.REG_IDCard })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                            <a class="btn btn-danger" href="@Url.Action("Delete", "Register_SC", new { id = item.REG_IDCard })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                        </td>*@
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
+    </script>
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.REG_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.REG_Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.REG_Tel)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.REG_Email)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.REG_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.REG_Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.REG_Tel)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.REG_Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.REG_IDCard }) |
-            @Html.ActionLink("Details", "Details", new { id=item.REG_IDCard }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.REG_IDCard })
-        </td>
-    </tr>
-}
-
-</table>
