--- a/CSManagement/CSManagement/Views/Schools/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Schools/Create.cshtml
@@ -40,12 +40,12 @@
                         @Html.EditorFor(model => model.SCH_Tel, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.SCH_Tel, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <hr />
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:15px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
-                        <a class="btn btn-default col-lg-3" style="float:left;font-size:15px" href="@Url.Action("Index", "Pictures")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
-                    </div>
+                <hr />
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
+                    <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("Index", "Schools")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
                 </div>
             </div>
         </div>
