--- a/CSManagement/CSManagement/Views/Short_Course/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Short_Course/Edit.cshtml
@@ -5,34 +5,38 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Short_Course</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.SC_ID)
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <h3 class="box-title">แก้ไขข้อมูลหลักสูตรอบรม</h3>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SC_NameTH, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SC_NameTH, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SC_NameTH, "", new { @class = "text-danger" })
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
             </div>
         </div>
+        <!-- /.box-header -->
+        <div class="box-body" style="font-size:20px">
+            <div class="row">
+                <div class="form-group col-md-2" style="text-align:right">
+                    @Html.LabelFor(model => model.SC_NameTH, "ชื่อหลักสูตรอบรม", htmlAttributes: new { @class = "control-label" })
+                </div>
+                <div class="form-group col-md-10">
+                    @Html.EditorFor(model => model.SC_NameTH, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SC_NameTH, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <hr />
+            <div class="text-center">
+                <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
+                <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("Index", "Short_Course")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
             </div>
         </div>
     </div>
+</section>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
