--- a/CSManagement/CSManagement/Views/Short_Course/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Short_Course/Index.cshtml
@@ -3,32 +3,50 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>Index</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการข้อมูลหลักสูตรอบรม</h1>
+                    <div style="float:right">
+                        <a class="btn btn-success" href="@Url.Action("Create", "Short_Course")"><i class="fa fa-plus"></i> เพิ่มข้อมูลหลักสูตร</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.SC_NameTH)
-        </th>
-        <th></th>
-    </tr>
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">ชื่อหลักสูตรอบรม</th>
+                        <th style="text-align:center">จัดการข้อมูล</th>
+                    </tr>
+                </thead>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SC_NameTH)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SC_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SC_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SC_ID })
-        </td>
-    </tr>
-}
+                <tbody>
 
-</table>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SC_NameTH)
+                            </td>
+                            <td style="text-align:center">
+                                <a class="btn btn-warning" href="@Url.Action("Edit", "Short_Course", new { id = item.SC_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                                @*<a class="btn btn-info" href="@Url.Action("Details", "Short_Course", new { id = item.SC_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>*@
+                                <a class="btn btn-danger" href="@Url.Action("Delete", "Short_Course", new { id = item.SC_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
