--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -27,13 +27,22 @@
                         @Html.ValidationMessageFor(model => model.Stu_ID, "", new { @class = "text-danger" })
                     </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Stu_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Stu_Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Stu_Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="form-group col-md-3">
+                        @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.Stu_Title, new List<SelectListItem>()
+                        {
+                            new SelectListItem() { Text = "นาย", Value = "นาย" },
+                            new SelectListItem() { Text = "นาง", Value = "นาง" },
+                            new SelectListItem() { Text = "นางสาว", Value = "นางสาว"}
+                        }, "เลือกคำนำหน้าชื่อ", new { @id = "Stu_Sex", @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        @Html.LabelFor(model => model.Stu_Name, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Stu_Name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Stu_Name, "", new { @class = "text-danger" })
+                    </div>
 
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_Surname, htmlAttributes: new { @class = "control-label" })
